# taste-travel

./: .dockerignore  .env.example  .env~  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260402_000001_initial_schema.py  20260402_000002_seed_place_metadata.py  20260402_000003_seed_place_enrichment.py  20260402_000004_seed_enrichment_metadata.py  20260403_000005_seed_ai_enrichment.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/endpoints/: health.py  me.py  recommendations.py
app/core/: config.py
app/db/: base.py  session.py
app/integrations/: google_places.py  mock_recommendations.py
app/models/: base.py  enums.py  feedback.py  recommendation.py  seed_restaurant.py  taste_profile.py  taste_seed.py  user.py
app/repositories/: recommendation.py  taste_profile.py  taste_seed.py  user.py
app/schemas/: common.py  feedback.py  recommendation.py  seed_restaurant.py  taste_profile.py  taste_seed.py  user.py
app/services/: ai_seed_extraction.py  feedback_service.py  recommendation.py  restaurant_identity.py  seed_enrichment.py  seed_restaurant.py  taste_profile.py  user.py
app/tests/: conftest.py  test_api.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: icons.tsx
frontend/lib/: api.ts
scripts/: start.sh  test.sh
