[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-travel-backend"
version = "0.1.0"
description = "MVP backend for a travel restaurant recommendation app"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.3,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
